--- a/studsluzba_server/src/main/resources/application.properties
+++ b/studsluzba_server/src/main/resources/application.properties
@@ -1,29 +1,13 @@
-# ===============================
-# App
-# ===============================
-spring.application.name=studsluzba-server
-server.port=8090
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Keep SQL noise down (flip to true while debugging)
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.properties.hibernate.use_sql_comments=false
-logging.level.org.hibernate.SQL=OFF
-logging.level.org.hibernate.type.descriptor.sql=OFF
-logging.level.org.hibernate.tool.schema=OFF
+spring.datasource.url=jdbc:mysql://localhost:3306/studsluzba?serverTimezone=UTC
+spring.datasource.username=testuser
+spring.datasource.password=testpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Safer default: don?t keep the session open across view rendering
-spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# ===============================
-# (Optional) Switch to H2 (in-memory) with web UI
-# To use H2 instead of MySQL: COMMENT OUT the MySQL block above and UNCOMMENT this block.
-# ===============================
-spring.datasource.url=jdbc:h2:mem:demo;DB_CLOSE_DELAY=-1;MODE=MySQL
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.h2.console.enabled=false
