--- a/studsluzba_server/src/main/resources/application.properties
+++ b/studsluzba_server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.data.rest.base-path=/api
+
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
