--- a/studsluzba_server/src/main/resources/application.properties
+++ b/studsluzba_server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.data.rest.base-path=/api
+spring.data.rest.default-media-type=application/json
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
